KSENROLL-111764: Fixing spacing of padding in Reg Cart.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@65076 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/reg-cart/app/styles/less/main.less
+++ b/ks-enroll-ui/src/main/angular/reg-cart/app/styles/less/main.less
@@ -116,6 +116,10 @@ body {
 .container-narrow > hr {
   margin: 30px 0;
 }
+ .container {
+   padding-left: 0px;
+   padding-right: 0px;
+ }
 
 /* Main marketing message and sign up button */
 .jumbotron {
